ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: eksapp
  name: ingress-eksapp
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - path: /getallcrew
            pathType: Prefix
            backend:
              service:
                name: readcrew
                port:
                  number: 80
          - path: /getcrew
            pathType: Prefix
            backend:
              service:
                name: readcrew
                port:
                  number: 80
          - path: /updateCrew
            pathType: Prefix
            backend:
              service:
                name: updatecrew
                port:
                  number: 80
          - path: /addCrew
            pathType: Prefix
            backend:
              service:
                name: addcrew
                port:
                  number: 80
          - path: /deleteCrew
            pathType: Prefix
            backend:
              service:
                name: deletecrew
                port:
                  number: 80
